--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   height: 100%;
+  color: #f5f5f5;
 }
 
 div {
@@ -14,6 +15,17 @@ div {
 }
 
 a {
-  color: #000;
+  color: #f5f5f5;
   text-decoration: none;
+}
+:root {
+  --text-menu-color-active: #f5f5f5;
+  --text-menu-color:#757575;
+  --text-menu-background-active: #202020;
+  --text-menu-background-hover: #2a2a2a;
+  --text-menu-background-active-hover: #373737;
+  --icon-header-color:#9a9a9a;
+  --icon-header-color:#9a9a9a;
+  --icon-header-color-hover: #f5f5f5;
+  
 }
