--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -18,6 +18,21 @@ a {
   color: #f5f5f5;
   text-decoration: none;
 }
+
+@font-face {
+  font-family: 'iconfont';
+  /* Project id 4370236 */
+  src: url('//at.alicdn.com/t/c/font_4370236_a9q8p20zqki.woff2?t=1703491048565') format('woff2'),
+    url('//at.alicdn.com/t/c/font_4370236_a9q8p20zqki.woff?t=1703491048565') format('woff'),
+    url('//at.alicdn.com/t/c/font_4370236_a9q8p20zqki.ttf?t=1703491048565') format('truetype'),
+    url('//at.alicdn.com/t/c/font_4370236_a9q8p20zqki.svg?t=1703491048565#iconfont') format('svg');
+}
+.iconfont {
+  font-family: 'iconfont'!important;
+  font-size: 16px;
+  font-style: normal;
+  color: #dbdbdb;
+}
 :root {
   --text-menu-color-active: #f5f5f5;
   --text-menu-color:#757575;
