--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -10,6 +10,11 @@ body {
   color: #f5f5f5;
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 div {
   box-sizing: border-box;
 }
@@ -18,7 +23,6 @@ a {
   color: #f5f5f5;
   text-decoration: none;
 }
-
 @font-face {
   font-family: 'iconfont';
   /* Project id 4370236 */
