--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -24,28 +24,31 @@ a {
   text-decoration: none;
 }
 @font-face {
-  font-family: 'iconfont';
-  /* Project id 4370236 */
-  src: url('//at.alicdn.com/t/c/font_4370236_5rmmc3i86so.woff2?t=1703557023573') format('woff2'),
-    url('//at.alicdn.com/t/c/font_4370236_5rmmc3i86so.woff?t=1703557023573') format('woff'),
-    url('//at.alicdn.com/t/c/font_4370236_5rmmc3i86so.ttf?t=1703557023573') format('truetype'),
-    url('//at.alicdn.com/t/c/font_4370236_5rmmc3i86so.svg?t=1703557023573#iconfont') format('svg');
+  font-family: 'iconfont'; /* Project id 4370236 */
+  src:
+    url('//at.alicdn.com/t/c/font_4370236_z8zvskz8qq.woff2?t=1708327527032')
+      format('woff2'),
+    url('//at.alicdn.com/t/c/font_4370236_z8zvskz8qq.woff?t=1708327527032')
+      format('woff'),
+    url('//at.alicdn.com/t/c/font_4370236_z8zvskz8qq.ttf?t=1708327527032')
+      format('truetype'),
+    url('//at.alicdn.com/t/c/font_4370236_z8zvskz8qq.svg?t=1708327527032#iconfont')
+      format('svg');
 }
 
 .iconfont {
-  font-family: 'iconfont'!important;
+  font-family: 'iconfont' !important;
   font-size: 16px;
   font-style: normal;
   color: #dbdbdb;
 }
 :root {
   --text-menu-color-active: #f5f5f5;
-  --text-menu-color:#757575;
+  --text-menu-color: #757575;
   --text-menu-background-active: #202020;
   --text-menu-background-hover: #2a2a2a;
   --text-menu-background-active-hover: #373737;
-  --icon-header-color:#9a9a9a;
-  --icon-header-color:#9a9a9a;
+  --icon-header-color: #9a9a9a;
+  --icon-header-color: #9a9a9a;
   --icon-header-color-hover: #f5f5f5;
-  
 }
